--- a/index.html
+++ b/index.html
@@ -7,5 +7,32 @@
     <script src="index.js" defer></script>
     <title>Calculator</title>
   </head>
-  <body></body>
+  <body>
+    <div id="wrapper">
+      <div class="calculator">
+        <div class="display"></div>
+        <div class="keypad">
+          <div class="cal-key">C</div>
+          <div class="cal-key">+/-</div>
+          <div class="cal-key">%</div>
+          <div class="cal-key">divide</div>
+          <div class="cal-key">7</div>
+          <div class="cal-key">8</div>
+          <div class="cal-key">9</div>
+          <div class="cal-key">X</div>
+          <div class="cal-key">4</div>
+          <div class="cal-key">5</div>
+          <div class="cal-key">6</div>
+          <div class="cal-key">-</div>
+          <div class="cal-key">1</div>
+          <div class="cal-key">3</div>
+          <div class="cal-key">2</div>
+          <div class="cal-key">+</div>
+          <div class="cal-key cal-key-double">0</div>
+          <div class="cal-key">.</div>
+          <div class="cal-key">=</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
