--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
   <body>
     <div id="wrapper">
       <div class="calculator">
-        <div class="display"></div>
+        <div class="display">05683745</div>
         <div class="keypad">
-          <div class="cal-key">C</div>
-          <div class="cal-key">+/-</div>
-          <div class="cal-key">%</div>
-          <div class="cal-key">divide</div>
-          <div class="cal-key">7</div>
-          <div class="cal-key">8</div>
-          <div class="cal-key">9</div>
-          <div class="cal-key">X</div>
-          <div class="cal-key">4</div>
-          <div class="cal-key">5</div>
-          <div class="cal-key">6</div>
-          <div class="cal-key">-</div>
-          <div class="cal-key">1</div>
-          <div class="cal-key">3</div>
-          <div class="cal-key">2</div>
-          <div class="cal-key">+</div>
-          <div class="cal-key cal-key-double">0</div>
-          <div class="cal-key">.</div>
-          <div class="cal-key">=</div>
+          <button class="cal-key">C</button>
+          <button class="cal-key">+/-</button>
+          <button class="cal-key">%</button>
+          <button class="cal-key">÷</button>
+          <button class="cal-key digit-key">7</button>
+          <button class="cal-key digit-key">8</button>
+          <button class="cal-key digit-key">9</button>
+          <button class="cal-key">×</button>
+          <button class="cal-key digit-key">4</button>
+          <button class="cal-key digit-key">5</button>
+          <button class="cal-key digit-key">6</button>
+          <button class="cal-key">-</button>
+          <button class="cal-key digit-key">1</button>
+          <button class="cal-key digit-key">3</button>
+          <button class="cal-key digit-key">2</button>
+          <button class="cal-key">+</button>
+          <button class="cal-key cal-key-double digit-key">0</button>
+          <button class="cal-key">●</button>
+          <button class="cal-key">=</button>
         </div>
       </div>
     </div>
