--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="wrapper">
       <div class="calculator">
-        <div class="display">05683745</div>
+        <div class="display">0</div>
         <div class="keypad">
           <button class="cal-key">C</button>
           <button class="cal-key">+/-</button>
