--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="calculator">
         <div class="display">0</div>
         <div class="keypad">
-          <button class="cal-key">C</button>
+          <button class="cal-key clear-key">C</button>
           <button class="cal-key">+/-</button>
           <button class="cal-key">%</button>
           <button class="cal-key">÷</button>
