--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="display">0</div>
         <div class="keypad">
           <button class="cal-key clear-key">C</button>
-          <button class="cal-key">+/-</button>
-          <button class="cal-key">%</button>
-          <button class="cal-key">÷</button>
+          <button class="cal-key operator-key">+/-</button>
+          <button class="cal-key operator-key">%</button>
+          <button class="cal-key operator-key">÷</button>
           <button class="cal-key digit-key">7</button>
           <button class="cal-key digit-key">8</button>
           <button class="cal-key digit-key">9</button>
@@ -23,11 +23,11 @@
           <button class="cal-key digit-key">4</button>
           <button class="cal-key digit-key">5</button>
           <button class="cal-key digit-key">6</button>
-          <button class="cal-key">-</button>
+          <button class="cal-key operator-key">-</button>
           <button class="cal-key digit-key">1</button>
           <button class="cal-key digit-key">3</button>
           <button class="cal-key digit-key">2</button>
-          <button class="cal-key">+</button>
+          <button class="cal-key operator-key">+</button>
           <button class="cal-key cal-key-double digit-key">0</button>
           <button class="cal-key">●</button>
           <button class="cal-key">=</button>
