Update variable names

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <button class="cal-key digit-key">7</button>
           <button class="cal-key digit-key">8</button>
           <button class="cal-key digit-key">9</button>
-          <button class="cal-key">×</button>
+          <button class="cal-key operator-key">×</button>
           <button class="cal-key digit-key">4</button>
           <button class="cal-key digit-key">5</button>
           <button class="cal-key digit-key">6</button>
