Append numbers to both number variables

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <button class="cal-key operator-key">+</button>
           <button class="cal-key cal-key-double digit-key">0</button>
           <button class="cal-key">●</button>
-          <button class="cal-key">=</button>
+          <button class="cal-key operator-key">=</button>
         </div>
       </div>
     </div>
