Amend logic for calculations

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="wrapper">
+      <p class="error-msg"></p>
       <div class="calculator">
         <div class="display">0</div>
         <div class="keypad">
@@ -30,7 +31,7 @@
           <button class="cal-key operator-key">+</button>
           <button class="cal-key cal-key-double digit-key">0</button>
           <button class="cal-key">●</button>
-          <button class="cal-key operator-key">=</button>
+          <button class="cal-key evaluation-key">=</button>
         </div>
       </div>
     </div>
