--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="calculator">
         <div class="display">0</div>
         <div class="keypad">
-          <button class="cal-key clear-key">C</button>
-          <button class="cal-key plus-minus">+/-</button>
-          <button class="cal-key percentage">%</button>
+          <button class="cal-key clear-key utility-key">C</button>
+          <button class="cal-key plus-minus utility-key">+/-</button>
+          <button class="cal-key percentage utility-key">%</button>
           <button class="cal-key operator-key">÷</button>
           <button class="cal-key digit-key">7</button>
           <button class="cal-key digit-key">8</button>
@@ -28,9 +28,11 @@
           <button class="cal-key digit-key">2</button>
           <button class="cal-key digit-key">3</button>
           <button class="cal-key operator-key">+</button>
-          <button class="cal-key cal-key-double digit-key">0</button>
+          <button class="cal-key cal-key-double digit-key btm-key-left">
+            0
+          </button>
           <button class="cal-key decimal">●</button>
-          <button class="cal-key evaluation-key">=</button>
+          <button class="cal-key evaluation-key btm-key-right">=</button>
         </div>
       </div>
     </div>
